# goit-pythonweb-hw-06

./: .env  .env.example  .gitignore  README.md  alembic.ini  create_tables.py  db.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 9c1ee2c89e44_initial_structure.py  b61d7da2d273_create_base_schema.py
